horizontal scroll fixed

--- a/blocks/header/__lang-link/header__lang-link-en.css
+++ b/blocks/header/__lang-link/header__lang-link-en.css
@@ -1,8 +1,5 @@
 .header__lang-link-en {
-    position: absolute;
     width: 29px;
     height: 28px;
-    left: 1203px;
-    top: 46px;
     text-decoration-line: none;
 }
