--- a/blocks/header/__lang-link/header__lang-link-ru.css
+++ b/blocks/header/__lang-link/header__lang-link-ru.css
@@ -1,8 +1,6 @@
 .header__lang-link-ru {
-    position: absolute;
     width: 30px;
     height: 28px;
-    left: 1155px;
-    top: 46px;
+    margin-right: 18px;
     text-decoration-line: underline;
 }
