--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -22,11 +22,8 @@
 
 @media screen and (max-width: 320px) {
     .header__lang-link {
-        position: absolute;
         width: 22px;
         height: 20px;
-        left: 242px;
-        top: 30px;
     }
 }
 
