--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,5 +1,5 @@
 .page {
-    max-width: 1280px;
+    max-width: 100%;
     font-family: 'Inter', sans-serif;
     align-self: center;
     background-color: #2A2C2F;
@@ -11,7 +11,7 @@
     text-rendering: optimizeLegibility;
 }
 
-@media screen and (min-width: 1281px) {
+@media screen and (min-width: 1280px) {
     .page {
         margin: 0 auto;
     }
